Added test for storing player weapon

--- a/views/battle.erb
+++ b/views/battle.erb
@@ -1,4 +1,4 @@
-<%= @player.name %> vs Computer
+<%= $player.name %> vs Computer
 
 <form action = "/results" method = "post">
   <label for ="Player_Weapon">
